--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <main class="content-area">
 
-            
+            <!-- search area -->
             <div class="search-bar col-md-6 mx-auto">
                 <h1 class="text-center">Hard Rock Lyric Search</h1>
                 <div class="search-box my-5">
@@ -62,8 +62,9 @@
 
             </div>
 
+            <!-- result div box -->
+            <div id="song-container" class="search-result col-md-8 mx-auto py-4">
 
-            <div class="search-result col-md-8 mx-auto py-4">
                 <div class="single-result row align-items-center my-3 p-3">
                     <div class="col-md-9">
                         <h3 class="lyrics-name">Purple Noon</h3>
@@ -73,6 +74,16 @@
                         <button class="btn btn-success">Get Lyrics</button>
                     </div>
                 </div>
+                <!-- <div class="single-result row align-items-center my-3 p-3">
+                    <div class="col-md-9">
+                        <h3 class="lyrics-name">Purple Noon</h3>
+                        <p class="author lead">Album by <span>Washed Out</span></p>
+                    </div>
+                    <div class="col-md-3 text-md-right text-center">
+                        <button class="btn btn-success">Get Lyrics</button>
+                    </div>
+                </div> -->
+
             </div>
 
 
