--- a/index.html
+++ b/index.html
@@ -58,22 +58,13 @@
 
 
             <!-- Single Lyrics -->
-            <div class="single-lyrics text-center">
-
+            <div id="lyricsDiv" class="single-lyrics text-center">
+                <p id="errorP"></p>
             </div>
 
             <!-- result div box -->
             <div id="song-container" class="search-result col-md-8 mx-auto py-4">
 
-                <div class="single-result row align-items-center my-3 p-3">
-                    <div class="col-md-9">
-                        <h3 class="lyrics-name">Purple Noon</h3>
-                        <p class="author lead">Album by <span>Washed Out</span></p>
-                    </div>
-                    <div class="col-md-3 text-md-right text-center">
-                        <button class="btn btn-success">Get Lyrics</button>
-                    </div>
-                </div>
                 <!-- <div class="single-result row align-items-center my-3 p-3">
                     <div class="col-md-9">
                         <h3 class="lyrics-name">Purple Noon</h3>
