add Enter search option

--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
                     <button onclick="searchSong()" id="search-option" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
-
+            <!-- spinner -->
+            <div id="spinner" class="d-flex d-none justify-content-center">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
 
             <!-- Single Lyrics -->
             <div id="lyricsDiv" class="single-lyrics text-center">
